fix center align error and empty

--- a/src/RecipeList.css
+++ b/src/RecipeList.css
@@ -11,7 +11,6 @@
 	color: #0d0a07
 }
 
-
 .recipes-full {
 	display: flex;
 	height: 30em;
@@ -43,6 +42,23 @@
 	display: flex;
 	justify-content: center;
 }
+
+.recipes-full .recipe-empty {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+  width: 100%;
+}
+
+.recipes-full .recipe-error {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+  width: 100%;
+}
+
 .recipe-loading img {
 	height: 10em;
 	width: 15em;
